Stop using deprecate Runtime.exec method
Move to ProcessBuilder.start and do some minor modernizations while at
it.
Special checks for binutils 2.16(released 2005!) are dropped to reduce
noise in the tests.